<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <!--
             <ImageView
            android:id="@+id/imageView1"
            android:layout_width="210dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/log_logo_2"
            android:layout_marginTop="1dp"
             />
        -->

        <LinearLayout
            android:layout_width="250dp"
            android:layout_height="100dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/log_logo_2"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/version_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="23dp"
                android:layout_weight="1"
                android:gravity="right"
                android:text="@string/versName"
                android:textColor="@color/androidBlue2"
                android:textSize="19sp"
                android:textStyle="bold"
                android:typeface="sans" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="52dip"
                android:layout_height="55dip"
                android:background="@color/LightGrey"
                android:contentDescription="@string/section"
                android:src="@android:drawable/ic_menu_mapmode" />

            <EditText
                android:id="@+id/editTextusername"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/password"
                android:digits="@string/inputpatterfornumeric"
                android:hint="@string/section"
                android:inputType="number"
                android:maxLength="8"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:text="2000"
                android:textColor="@color/DarkGray"
                android:textSize="18sp"
                android:typeface="monospace" />
            <!-- android:text="1310" -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/mrname"
                android:src="@drawable/user_name" />

            <EditText android:text="MR05"
                android:id="@+id/editTextmrcode"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/password"
                android:digits="@string/inputpatterforalphanumeric"
                android:hint="@string/mrname"
                android:inputType="textCapCharacters"
                android:maxLength="8"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/DarkGray"
                android:textSize="18sp"
                android:typeface="monospace" />
            <!-- android:text="13" -->
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:layout_marginTop="8dp"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:contentDescription="@string/pw"
                android:src="@drawable/password_login" />

            <EditText android:text="0002"
                android:id="@+id/editTextpassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_marginLeft="3dp"
                android:background="@drawable/password"
                android:digits="@string/inputpatterfornumeric"
                android:hint="@string/pw"
                android:inputType="numberPassword"
                android:maxLength="8"
                android:paddingLeft="8dp"
                android:singleLine="true"
                android:textColor="@color/DarkGray"
                android:textSize="18sp"
                android:typeface="monospace" />
        </LinearLayout>
        <!-- android:text="0131" -->

        <Button
            android:id="@+id/btnlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="13dp"
            android:layout_marginRight="13dp"
            android:layout_marginTop="16dp"
            android:background="@android:drawable/btn_default"
            android:gravity="center"
            android:shadowColor="@color/SkyBlue"
            android:shadowDx="1"
            android:shadowDy="1"
            android:shadowRadius="1"
            android:text="@string/login"
            android:textColor="@color/androidBlue"
            android:textSize="18sp"
            android:textStyle="bold"
            android:typeface="sans" />
    </LinearLayout>

</ScrollView>