<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#eeeeee" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/deviceAddress"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/border"
            android:padding="5dp"
            android:text="Device Name"
            android:textColor="@color/androidBlue3" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="3dp"
            android:visibility="gone" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="SDO CODE"
                android:textColor="@color/Gray"
                android:textSize="12sp" >
            </TextView>

            <TextView
                android:id="@+id/sdocodevalue_bt_reader"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="6dp"
                android:text="TextView"
                android:textSize="12sp"
                android:textStyle="bold" >
            </TextView>

            <TextView
                android:id="@+id/datevalue_bt_reader"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="right|center"
                android:text="TextView"
                android:textSize="12sp"
                android:textStyle="bold" >
            </TextView>
        </LinearLayout>

        <TextView
            android:id="@+id/device_pass_log"
            style="@style/textShadow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:singleLine="false"
            android:text="@string/none_paired"
            android:textColor="@color/DarkGray"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="5dp"
            android:background="@drawable/border_light_gray_inside"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:id="@+id/connectionState"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_weight="1"
                android:text="@string/disconnected" />

            <ProgressBar
                android:id="@+id/progressBar3"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="30dp"
                android:layout_height="30dp" />

            <Button
                android:id="@+id/btn_bt_reader_connect"
                style="@style/btnJvnnlBlue"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="READ METER" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_bt_reader_config"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/activity_sm_margin"
            android:layout_marginRight="@dimen/activity_sm_margin"
            android:layout_marginTop="@dimen/activity_sm_margin"
            android:text="@string/readdevice"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearMeteDetails"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@android:drawable/picture_frame"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/WhiteSmoke"
                android:gravity="center"
                android:paddingBottom="5dp"
                android:paddingTop="5dp"
                android:text="METER DETAILS"
                android:textColor="@color/androidBlue3"
                android:textSize="18sp"
                android:textStyle="bold" />

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/Gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="Meter Number"
                    android:textColor="@color/androidBlue3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1px"
                    android:layout_height="32dp"
                    android:background="@color/Gray" />

                <TextView
                    android:id="@+id/txtMeterNumber"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="-"
                    android:textColor="@color/DarkGray"
                    android:textSize="18sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/Gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp" >

                <TextView
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1.3"
                    android:text="Present Reading"
                    android:textColor="@color/androidBlue3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1px"
                    android:layout_height="32dp"
                    android:background="@color/Gray" />

                <TextView
                    android:id="@+id/txtMeterReading"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:text="-"
                    android:textColor="@color/Black"
                    android:textSize="21sp"
                    android:textStyle="bold" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                android:padding="5dp"
                android:visibility="gone" >

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Consumption"
                    android:textColor="@color/androidBlue3"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <View
                    android:layout_width="1px"
                    android:layout_height="32dp"
                    android:background="@color/Gray" />

                <TextView
                    android:id="@+id/txtConsuption"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:text="TextView"
                    android:textColor="@color/Black"
                    android:textStyle="bold" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:background="@color/Gray" />

            <Button
                android:id="@+id/btn_bt_reader_takereading"
                style="@style/btnJvnnlBlue"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:text="GO TO BILLING" />
        </LinearLayout>

        <TextView
            android:id="@+id/tvRecv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxLines="4"
            android:padding="5dp"
            android:scrollbarStyle="insideInset"
            android:scrollbars="vertical"
            android:text="Receive here"
            android:textColor="@color/Crimson"
            android:visibility="gone" />
    </LinearLayout>

</ScrollView>